# chinese-trainer

./: .editorconfig  .env  .gitignore  .luarc.json  .tool-versions  Cargo.toml  Dockerfile  Makefile.toml  README.md  build.rs  chinese-trainer.code-workspace  codegen.ts  compose.yml  graphql.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  redis.conf  script.lua
.github/workflows/: ci.yml
backend/: Cargo.toml  build.rs
backend/src/: main.rs
bff/: codegen  main.ts  package.json  tsconfig.json
docs/: development.md  restful-api.md
frontend/: .eslintrc.cjs  Taskfile.yml  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: Index.svelte  PinyinTextField.svelte  entrypoint.tsx  main.ts  option.spec.ts  option.ts  pinyin.ts  result.ts
frontend/src/domains/: pinyin.spec.ts  pinyin.ts
frontend/src/pages/Main/: index.tsx
frontend/src/ui-components/: index.ts
frontend/src/ui-components/PinyinTextField/: index.tsx  style.css.ts
frontend/src/ui-components/ToneSelector/: index.tsx  style.css.ts
frontend/src/utilities/: emptyObject.ts  mapTuple.ts  option.spec.ts  option.ts  result.ts
graphql/: schema.graphql
graphql/queries/: word.graphql
lua-types/: fc.lua
migrations/: 20240602090748_init.sql
nextjs/: package-lock.json
pinyin-text-field/: .prettierrc  README.md  index.html  jest.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vite.config.js
pinyin-text-field/src/: PinyinTextField.svelte  main.ts  option.spec.ts  option.ts  pinyin.ts
proto/: sentence.proto  todo.proto
protos/: word.proto
src/: anthropic.rs  env.rs  grpc_server.rs  lib.rs  main.rs  todo_db.rs
