[package]
name = "chinese_trainer"
version = "0.1.0"
authors = [
    "Kodai Matsumoto <nobita.0918@gmail.com>",
]

repository = "https://github.com/0918nobita/chinese-trainer"
readme = "./README.md"

license = "MIT"
description = "A CLI tool to learn Chinese words"

edition = "2021"

[dependencies]
lettre = { version = "0.10.4", default-features = false, features = [ "builder", "smtp-transport", "tokio1-rustls-tls" ] }
prost = "0.11.9"
rustls = "0.21.1"
serde = { version = "1.0.163", features = [ "derive" ] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = [ "runtime-tokio-native-tls", "sqlite" ] }
tokio = { version = "1.28.1", features = [ "rt-multi-thread", "macros" ] }
tonic = "0.9.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [ "env-filter" ] }

[build-dependencies]
tonic-build = "0.9.2"
