[package]
name = "chinese_trainer"
version = "0.1.0"
authors = [
    "Kodai Matsumoto <nobita.0918@gmail.com>",
]

repository = "https://github.com/0918nobita/chinese-trainer"
readme = "./README.md"

license = "MIT"
description = "Backend for Chinese Trainer"

edition = "2021"

[dependencies]
axum = "0.6.19"
serde = { version = "1.0.163", features = [ "derive" ] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = [ "runtime-tokio-native-tls", "sqlite" ] }
tokio = { version = "1.28.1", features = [ "rt-multi-thread", "macros" ] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [ "env-filter" ] }
